<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    >




    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/info_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="@dimen/text_size_40sp"
        android:textColor="@color/red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/seven_button"
            android:textSize="@dimen/text_size_20sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/eight_button"
            android:textSize="@dimen/text_size_20sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/nine_button"
            android:textSize="@dimen/text_size_20sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/div_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/divide_button"
            android:textSize="@dimen/text_size_20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/four_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/four_button"
            android:textSize="@dimen/text_size_20sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/five_button"
            android:textSize="@dimen/text_size_20sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/six_button"
            android:textSize="@dimen/text_size_20sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mul_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/multiply_button"
            android:textSize="@dimen/text_size_20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/one_button"
            android:textSize="@dimen/text_size_20sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/two_button"
            android:textSize="@dimen/text_size_20sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/trio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/three_button"
            android:textSize="@dimen/text_size_20sp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/minus_button"
            android:textSize="@dimen/text_size_20sp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:textColor="@color/red"
            android:text="@string/button_clear"
            android:textSize="@dimen/text_size_20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nulla_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/null_button"
            android:textSize="@dimen/text_size_20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/dot_button"
            android:textSize="@dimen/text_size_20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_button_3dp"
            android:layout_weight="@dimen/weight_button_01"
            android:text="@string/add_button"
            android:textSize="@dimen/text_size_20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_button_01"
            android:layout_margin="@dimen/margin_button_3dp"
            android:text="@string/equals_button"
            android:textSize="@dimen/text_size_20sp" />

    </LinearLayout>






</LinearLayout>